UI improvements + backend initialization - UI improvements: Made navbar transparent + added linear gradient on the background for a more modern and polished look to the page. Removed Footer component now has better formatting (the top margin did not have enough padding). Added black borders to back to top button to prevent the secondary gradient color from occluding the button. - Better Mobile UI responsiveness: The previous version of the art gallery had the nav buttons joined together and rounded. This led to a rather awkward looking format for the navigation links. I modified the responsive changes so that the nav buttons are rearranged in a column format for portrait shaped windows. The navigation menu now looks more well-organized and fits better on mobile devices. - Fixed bug where code text is displayed by accident in the gallery page. This was due to a conditional statement not being closed properly. This has now been resolved. - Initialized backend folder with a database.py file where I create a database class that holds credentials to access the db. Connection test was successful. - Initialized the commissions page where I show my prices for each type of artwork (sketch, lineart, color). Still a work in progress.

--- a/art_gallery_portfolio/src/Styles/Footer.css
+++ b/art_gallery_portfolio/src/Styles/Footer.css
@@ -22,40 +22,46 @@
     height: 90px;
 }
 .footer-message{
+    padding: 20px;
     color: rgb(41, 207, 207);
     text-align: center;
 }
 .footer{
     margin-top: 50px;
     height: 35vh;
-}
-.footer-bg{
     background-color: black;
 }
-.border{
-    width: 100%;
-    border-style: solid;
-    border-color: rgb(41, 207, 207);
-    border-width: 3px;
-    
+.footer-brand{
+    color: white;
+    opacity: 50%;
+    text-align: center;
+    font-size: 11px;
 }
 @media(max-width: 720px){
+    .footer-message h2{
+        font-size: 16px;
+    }
     .social-media-links{
-        flex-direction: column;
+        
         margin-left: 40px;
     }
     .social-media-logo{
-        width: 180px;
-        height: 180px;
+        width: 50px;
+        height: 50px;
     }
+   
     .social-media-logo:hover{
-        width: 160px;
-        height: 160px;
+        width: 60px;
+        height: 60px;
     }
     .logo-anchors p{
         font-size: 12px;
     }
     .footer{
-        height: 100vh;
+        height: 30vh;
+    }
+    .footer-brand{
+        
+        font-size: 8px;
     }
 }
