--- a/art_gallery_portfolio/src/Styles/Gallery.css
+++ b/art_gallery_portfolio/src/Styles/Gallery.css
@@ -6,7 +6,7 @@
     background-color: #151515;
     margin-bottom: 20px;
     
-    border-radius: 5px;
+   
 }
 .art-gallery-properties h2 h4{
     color: rgb(41, 207, 207);
@@ -22,7 +22,7 @@
     padding: 10px;
     border-style: solid;
     border-radius: 5px;
-    border-color: rgb(197, 211, 211);
+    border-color: rgb(41, 207, 207);
     border-width: 4px;
 }
 .img-title{
@@ -83,15 +83,19 @@
     color: black;
     
 }
+#back-to-top-btn{
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+    color: black;
+}
 .description-title p{
     margin-left: 20px;
 }
 .description-content{
     padding: 10px;
 }
-.img-thumbnail{
-    --bs-border-color: rgb(41, 207, 207);
-}
+
 .selected-artwork-container .col img {
     width: 100%;
     height: auto;
