--- a/art_gallery_portfolio/src/Styles/Navbar.css
+++ b/art_gallery_portfolio/src/Styles/Navbar.css
@@ -15,7 +15,7 @@
 }
 
 .navbar{
-    background-color: rgb(23, 23, 28);
+    background-color: transparent;
     display: flex;
     align-items: center;
 }
@@ -28,24 +28,31 @@
     margin-right: 20px;
 } 
 @media(max-width: 720px){
+    .navbar{
+        flex-direction: column;
+    }
     .navbar-items{
         width: 100%;
+        flex-direction: column;
         justify-content: center;
+        border-radius: 0;
     }
     .navbar-items div{
-        width: 100%;
-        
+        width: 90vw;
+        border-radius: 0;
+        margin: 0;
     }
     .btn{
         width: 100%;
         --bs-btn-font-size: 12px;
-
+        margin-bottom: 20px;
         
     }
     .navbar-logo{
         text-align: center;
-        width: 92%;
+        
         font-size: 32px;
         margin-bottom: 10px;
+        margin: 10px;
     }
 }
